Added modified files

--- a/personalWeb.html
+++ b/personalWeb.html
@@ -32,7 +32,7 @@
         <section id="about">
             <h2>About Me</h2>
             <p class="indent white-text">
-                <p>I'm a passionate Machine Learning Research Engineer currently working at Ivy, an open-source framework akin to TensorFlow, MXNet, Keras, etc.
+                <p>I'm a passionate Machine Learning Research Engineer intern currently working at Ivy, an open-source framework akin to TensorFlow, MXNet, Keras, etc.
                 In May 2023, I earned my degree in Computer Science from the University at Albany, NY, after transferring there in 2019 with 
                 an Associate degree in Engineering Science from Tompkins Cortland Community College in Dryden, NY.</p> 
                 <p>My professional journey is fueled by a deep fascination for machine learning, cybersecurity, and web development. I thrive 
@@ -55,7 +55,7 @@
                 <p>While familiarizing myself with Ivy's documentation and codebase during the onboarding process, I recognized the need 
                    for a concise manual tailored to new contributors. This guide emphasizes crucial sections, facilitating a seamless 
                    transition into the Ivy ecosystem. Please click <a href="Simple-Guide-ToNew-Ivy-Contributors.pdf" download>Download PDF</a> 
-                   to download a copy of my guide. 
+                   to download a copy of my guide. PS: The guide is being examined by Ivy engineers.
                 </p>
             </div>
             <div class="project">
@@ -82,8 +82,14 @@
                     flexible, and expressive data structures. <a href="myportfolio.html">Go to My Portfolio</a></p>
             </div>
             <div class="portfolio">
-                <h3>Portfolio 2: cMGP Project</h3>
-                <p>Learning the necessary functionalities of cMGP program. Please click here</p>
+                <h3>Portfolio 2: Machine Learning: Building Models</h3>
+                <p>Learning the concept of Decision Tree. One of the less fancier models that give more 
+                   accurate predictions. Decision trees are the basic building block for some of the best 
+                   models in data science. (in process...)</p>
+            </div>
+            <div class="portfolio">
+                <h3>Portfolio 3: cMGP Project</h3>
+                <p>Learning the necessary functionalities of cMGP program (in process...)</p>
             </div>
         </section>
         <section id="contact">
@@ -93,7 +99,7 @@
                     <p>Feel free to reach out:</p>
                     <address>
                     Email: ambrolum@gmail.com<br>
-                    LinkedIn: <a href="https://www.linkedin.com/in/ambroise">linkedin.com/in/ambroise-ngayinoko-417710192/</a><br>
+                    LinkedIn: <a href="https://www.linkedin.com/in/ambroise-ngayinoko-417710192/">LinkedIn Profile</a><br>
                     GitHub: <a href="https://github.com/Ambro19">github.com/Ambro19</a>
                     </address>
                 </h3>
