Fixed from Devs to Dev

--- a/personalWeb.html
+++ b/personalWeb.html
@@ -18,7 +18,7 @@
         <header>
             <h1>Ambroise Ngayinoko</h1>
             <p class="job-title">Software Engineer | Machine Learning Researcher</p>
-            <p class="main-interest">Main Interest: Machine Learning | Cybersecurity | Web Devs</p>
+            <p class="main-interest">Main Interest: Machine Learning | Cybersecurity | Web Dev</p>
         </header>
         <nav>
             <ul>
