--- a/personalWeb.html
+++ b/personalWeb.html
@@ -13,6 +13,7 @@
         <title>Ambroise Ngayinoko - Software Engineer</title>
         <link rel="stylesheet" href="styles.css">
         <script src="script.js" defer></script>
+        <script src="https://platform.linkedin.com/badges/js/profile.js" async defer type="text/javascript"></script>
     </head>
     <body>
         <header>
