changed page title

--- a/personalWeb.html
+++ b/personalWeb.html
@@ -10,7 +10,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Ambroise Ngayinoko - Software Engineer</title>
+        <title>Ambroise Ngayinoko - Computer Science Engineer</title>
         <link rel="stylesheet" href="styles.css">
         <script src="script.js" defer></script>
     </head>
