--- a/personalWeb.html
+++ b/personalWeb.html
@@ -10,7 +10,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Ambroise Ngayinoko - Software Engineer</title>
+        <title>Ambroise Comp. Sc. Engineer</title>
         <link rel="stylesheet" href="styles.css">
         <script src="script.js" defer></script>
         <script src="https://platform.linkedin.com/badges/js/profile.js" async defer type="text/javascript"></script>
@@ -18,7 +18,7 @@
     <body>
         <header>
             <h1>Ambroise Ngayinoko</h1>
-            <p class="job-title">Software Engineer | Machine Learning Researcher</p>
+            <p class="job-title">Computer Science Engineer | Machine Learning Researcher</p>
             <p class="main-interest">Main Interest: Machine Learning | Cybersecurity | Web Dev</p>
         </header>
         <nav>
@@ -38,7 +38,7 @@
                 an Associate degree in Engineering Science from Tompkins Cortland Community College in Dryden, NY.</p> 
                 <p>My professional journey is fueled by a deep fascination for machine learning, cybersecurity, and web development. I thrive 
                 on exploring the cutting edge of technology, and I'm dedicated to pushing the boundaries of what's possible in these fields.</p>
-                <p>Join me on my quest to innovate and make a mark in the world of tech.
+                <p>Let us join on the quest to innovate and make a mark in the world of tech.
             </p>
         </section>
         <section id="achievements">
@@ -56,7 +56,7 @@
                 <p>While familiarizing myself with Ivy's documentation and codebase during the onboarding process, I recognized the need 
                    for a concise manual tailored to new contributors. This guide emphasizes crucial sections, facilitating a seamless 
                    transition into the Ivy ecosystem. Please click <a href="Simple-Guide-ToNew-Ivy-Contributors.pdf" download>Download PDF</a> 
-                   to download a copy of my guide. PS: The guide is being examined by Ivy engineers.
+                   to download a copy of my guide. Note: The guide is being examined by Ivy engineers.
                 </p>
             </div>
             <div class="project">
