--- a/myportfolio1.html
+++ b/myportfolio1.html
@@ -69,27 +69,41 @@
     <section>
         <h2>Select Projects</h2>
         <!-- Add a brief description of your selected LabVIEW projects -->
-        <p>Pandas is a powerful open-source library for data manipulation and analysis in Python. It provides data structures and functions that make 
-            it easy to work with structured data, such as tables and time series, and perform various data operations efficiently.</p>
+        <p>Human biology can be complex, in part due to the function and interplay of the body's 
+            approximately 37 trillion cells, which are organized into tissues, organs, and systems. 
+            However, recent advances in single-cell technologies have provided unparalleled insight 
+            into the function of cells and tissues at the level of DNA, RNA, and proteins. 
+            Yet leveraging single-cell methods to develop medicines requires mapping causal links 
+            between chemical perturbations and the downstream impact on cell state. These experiments 
+            are costly and labor intensive, and not all cells and tissues are amenable to high-throughput 
+            transcriptomic screening. If data science could help accurately predict chemical perturbations 
+            in new cell types, it could accelerate and expand the development of new medicines.</p>
     </section>
 
     <section>
         <h2>Project Descriptions</h2>
         <!-- Write detailed descriptions for each project -->
-            <p> Project 1: Data Manipulation System<br>
+            <p> Project 1: Kaggle Machine Learning Competition: Open-Problem: Single - Cell Perturbations<br>
                 Goals:
                 <ul>
-                    <li>Manipulate datasets using various operations and processes.</li>
+                    <li>The goal of this competition is to predict how small molecules change gene expression in different cell types.
+
+                        The contribution will help develop methods to predict how cells respond to small molecule 
+                        drug perturbations, which could have important applications in drug discovery and basic biology.</li>
                 </ul>
 
                 Challenges:
                 <ul>
-                    <li>Find a suitable framework to meet the project's expectations.</li>
+                    <li>The competition participants are asked to build models that can predict the differential expression 
+                        of all 18,211 genes in the transcription dataset. In other words, they are expected to estimate how 
+                        the expression of each gene changes in response to experimental treatments or compounds.</li>
                 </ul>
 
                 Solutions:
                 <ul>
-                    <li>Develop Python code for tasks such as DataFrame manipulation, data filtering, sorting, and more.</li>
+                    <li>To provide solution, the competition participants are tasked with modeling differential 
+                        expression (DE) and how the impact of experimental perturbations on the expression levels of all 
+                        genes in the dataset is estimated.</li>
                 </ul>
             </p>
         <!-- Add more project descriptions as needed -->
@@ -100,73 +114,7 @@
         <!-- Share snippets of your LabVIEW code -->
         <pre>
             <code>
-# Create a DataFrame
-data = {'Name': ['John', 'Emma', 'Michael', 'Sophia', 'William'],
-        'Age': [25, 28, 31, np.nan, 22],
-        'Gender': ['M', 'F', 'M', 'F', 'M'],
-        'Salary': [50000, 60000, np.nan, 55000, 45000]}
-
-df = pd.DataFrame(data)
-
-# Data manipulation
-print("Original DataFrame:")
-print(df)
-
-# Selecting specific columns
-selected_columns = df[['Name', 'Age']]
-print("\nSelected columns:")
-print(selected_columns)
-
-# Filtering data
-filtered_data = df[df['Salary'] > 50000]
-print("\nFiltered data:")
-print(filtered_data)
-
-# Sorting data
-sorted_data = df.sort_values('Age', ascending=False)
-print("\nSorted data:")
-print(sorted_data)
-
-# Data cleaning
-# Handling missing values
-df['Age'].fillna(df['Age'].mean(), inplace=True)
-print("\nDataFrame with filled missing values:")
-print(df)
-
-# Removing duplicates
-df.drop_duplicates(subset=['Name'], inplace=True)
-print("\nDataFrame without duplicates:")
-print(df)
-
-# Data analysis
-# Computing descriptive statistics
-statistics = df.describe()
-print("\nDescriptive statistics:")
-print(statistics)
-
-# Calculating correlations
-correlation = df.corr()
-print("\nCorrelation matrix:")
-print(correlation)
-
-# Time series analysis
-# Creating a time series index
-date_range = pd.date_range('2023-01-01', periods=len(df), freq='M')
-df['Date'] = date_range
-
-# Shifting values
-df['Previous Salary'] = df['Salary'].shift(1)
-print("\nDataFrame with shifted values:")
-print(df)
-
-# Input and output
-# Writing data to a CSV file
-df.to_csv('data.csv', index=False)
-
-# Reading data from a CSV file
-df_read = pd.read_csv('data.csv')
-print("\nDataFrame read from CSV:")
-print(df_read)
+             # In progress
             </code>
         </pre>
     </section>
