Updated personalWeb.html file

--- a/personalWeb.html
+++ b/personalWeb.html
@@ -44,27 +44,30 @@
         <section id="achievements">
             <h2>Achievements</h2>
             <ul>
-                <li>Secured a paid internship position at Ivy, an open-source project.</li>
-                <li>Contributing to open-source ML project, Ivy.</li>
+                <li>Currently leading a Kaggle ML competition group: Open-Problem - Single-Cell Perturbations.</li>
+                <li>Secured an intesting internship position at Ivy, an open-source project.</li>
+                <li>Contributing to a language translation project for Wikipedia's articles, an NLP 
+                    (Natural Language Processing) project, at Grey-Box.</li>
                 <li>Submitted a proposed concised guide to Ivy for its new contributors.</li>
             </ul>
         </section>
         <section id="projects">
             <h2>Field Projects</h2>
             <div class="project">
-                <h3>Project Title 1: Simplified Ivy's Documentaions for New Contributors</h3>
-                <p>While familiarizing myself with Ivy's documentation and codebase during the onboarding process, I recognized the need 
-                   for a concise manual tailored to new contributors. This guide emphasizes crucial sections, facilitating a seamless 
-                   transition into the Ivy ecosystem. Please click <a href="Simple-Guide-ToNew-Ivy-Contributors.pdf" download>Download PDF</a> 
-                   to download a copy of my guide. Note: The guide is being examined by Ivy engineers.
+                <h3>Project Title 1: ML Competition - Open-Problem: Single - Cell Perturbations </h3>
+                <p>In the fast-paced world of single-cell analysis, the Kaggle competition titled "Open Problem: Single-Cell Perturbations" 
+                    plays a vital role. This research paper outlines the goals of the competition and underscores its importance in enhancing 
+                    our comprehension of how genes react to experimental changes at the single-cell level. A key method used in this competition 
+                    is Differential Expression (DE) Modeling, which allows us to calculate alterations in gene expression when subjected 
+                    to perturbations. 
                 </p>
             </div>
             <div class="project">
-                <h3>Project Title 2: "Enhancing Natural Language Processing with Syntactic Parsing: Uniting CYK (Cocke–Younger–Kasami) Algorithm and Deep Learning Techniques.</h3>
-                <p> This is my proposed research paper submitted to Ivy for consideration. This proposed paper captures the idea of combining the 
-                    CYK algorithm, a fundamental tool in automata theory for parsing context-free grammars, with advanced deep learning methods in 
-                    the context of natural language processing. It reflects the potential for cross-disciplinary insights that could lead to significant 
-                    advancements in both automata study and machine learning research.
+                <h3>Project Title 2: Simplified Ivy's Documentaions for New Contributors</h3>
+                <p> While familiarizing myself with Ivy's documentation and codebase during the onboarding process, I recognized the need 
+                    for a concise manual tailored to new contributors. This guide emphasizes crucial sections, facilitating a seamless 
+                    transition into the Ivy ecosystem. Click on <a href="Simple-Guide-ToNew-Ivy-Contributors.pdf" download>Download PDF</a> 
+                    to download a copy. Please note the guide is being examined by Ivy engineers.
                 </p>
             </div>
             <div class="project">
@@ -78,20 +81,19 @@
         <section id="portfolio">
             <h2>Portfolio</h2>
             <div class="portfolio">
-                <h3>Portfolio 1: Data Manipulation</h3>
-                <p>Developed data manipulation program using Panda, a Python package that provides fast,
-                    flexible, and expressive data structures. <a href="myportfolio.html">Go to My Portfolio</a></p>
+                <h3>Portfolio 1: ML Course: Building Models - Underfitting and Overfitting</h3>
+                <p>
+                Learning about materials such as underfitting and overfitting concepts to improve model performance.
+                Experimenting with different models and the usage of a reliable method to measure model accuracy. 
+                Also, exploring alternative models, such as decision trees with varying depth, to find the best predictions.
+                </p>
             </div>
             <div class="portfolio">
-                <h3>Portfolio 2: Machine Learning: Building Models</h3>
-                <p>Learning the concept of Decision Tree. One of the less fancier models that give more 
-                   accurate predictions. Decision trees are the basic building block for some of the best 
-                   models in data science. (in process...)</p>
+                <h3>Portfolio 2: Data Manipulation</h3>
+                <p>Developed a simple data manipulation program using Panda, a Python package that provides fast,
+                    flexible, and expressive data structures. <a href="myportfolio.html">Go to Portfolio</a></p>
             </div>
-            <div class="portfolio">
-                <h3>Portfolio 3: cMGP Project</h3>
-                <p>Learning the necessary functionalities of cMGP program (in process...)</p>
-            </div>
+                       
         </section>
         <section id="contact">
             <h2>Contact</h2>
