--- a/personalWeb.html
+++ b/personalWeb.html
@@ -65,7 +65,7 @@
             <div class="project">
                 <h3>Project Title 2: Simplified Ivy's Documentaions for New Contributors</h3>
                 <p> While familiarizing myself with Ivy's documentation and codebase during the onboarding process, I recognized the need 
-                    for a concise manual tailored to new contributors. This guide emphasizes crucial sections, facilitating a seamless 
+                    for a concise manual tailored to new contributors. This "proposed guide simply" emphasizes crucial sections, facilitating a seamless 
                     transition into the Ivy ecosystem. Click on <a href="Simple-Guide-ToNew-Ivy-Contributors.pdf" download>Download PDF</a> 
                     to download a copy. Please note the guide is being examined by Ivy engineers.
                 </p>
