--- a/personalWeb.html
+++ b/personalWeb.html
@@ -26,29 +26,29 @@
                 <li><a href="#about">About Me</a></li>
                 <li><a href="#achievements">Achievements</a></li>
                 <li><a href="#projects">Projects</a></li>
-                <li><a href="#portfolio">Portfolio</a></li>
+            <!--<li><a href="#portfolio">Portfolio</a></li> -->
                 <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
         <section id="about">
             <h2>About Me</h2>
             <p class="indent white-text">
-                <p>I'm a passionate Machine Learning Research Engineer intern currently working at Ivy, an open-source framework akin to TensorFlow, MXNet, Keras, etc.
-                In May 2023, I earned my degree in Computer Science from the University at Albany, NY, after transferring there in 2019 with 
-                an Associate degree in Engineering Science from Tompkins Cortland Community College in Dryden, NY.</p> 
-                <p>My professional journey is fueled by a deep fascination for machine learning, cybersecurity, and web development. I thrive 
-                on exploring the cutting edge of technology, and I'm dedicated to pushing the boundaries of what's possible in these fields.</p>
-                <p>Let us join on the quest to innovate and make a mark in the world of tech.
+                <p>I am a passionate Machine Learning Research Engineer intern, currently working at Ivy, an open-source framework similar to TensorFlow, MXNet, Keras, Numpy, PaddlePaddle, and others.</p>
+                <p>In addition to my work at Ivy, I am currently contributing to a project on Wikipedia, led by Grey-Box. This project involves tasks such as translating, comparing articles for discrepancies, and more. 
+                It is a significant initiative with a focus on Natural Language Processing (NLP).</p>
+                <p>I earned my degree in Computer Science from the University at Albany, NY in May 2023. Before that, I transferred to Albany in 2019 with an Associate degree in Engineering Science from Tompkins Cortland Community College in Dryden, NY.</p>
+                <p>My professional journey is driven by a deep fascination for machine learning, cybersecurity, and web development. I am constantly exploring the cutting edge of technology and am dedicated to pushing the boundaries of what's possible in these fields.</p>
+                <p>Let's embark on a quest to innovate and make a mark in the world of tech together.</p>
             </p>
         </section>
         <section id="achievements">
             <h2>Achievements</h2>
             <ul>
                 <li>Currently leading a Kaggle ML competition group: Open-Problem - Single-Cell Perturbations.</li>
-                <li>Secured an intesting internship position at Ivy, an open-source project.</li>
-                <li>Contributing to a language translation project for Wikipedia's articles, an NLP 
-                    (Natural Language Processing) project, at Grey-Box.</li>
+                <li>Secured an intesting internship position <a href="https://www.grey-box.ca/" download>at Ivy,</a> an open-source project.</li>
                 <li>Submitted a proposed concised guide to Ivy for its new contributors.</li>
+                <li>Contributing to a language translation project for Wikipedia's articles, an NLP 
+                    (Natural Language Processing) project, <a href="https://www.grey-box.ca/">at Grey-Box.</a></li> 
             </ul>
         </section>
         <section id="projects">
@@ -75,26 +75,9 @@
                 <h3>Project Title 3: Adversarial Attacks on Machine Learning-based Intrusion Detection Systems</h3>
                 <p> This is another proposed research topic under consideration. This proposed topic, attempts to explore how adversarial 
                     attacks can be used to bypass machine learning-based intrusion detection systems (IDS). Develop and test novel techniques 
-                    to enhance the robustness of IDS against adversarial examples, ultimately leading to more secure detection of network intrusions.
+                    to enhance the robustness of IDS against adversarial examples, ultimately leading to more secure detection of network intrusions.<!--project portfolio -->
                 </p>
             </div>
-        </section>
-        <section id="portfolio">
-            <h2>Portfolio</h2>
-            <div class="portfolio">
-                <h3>Portfolio 1: ML Course: Building Models - Underfitting and Overfitting</h3>
-                <p>
-                Learning about materials such as underfitting and overfitting concepts to improve model performance.
-                Experimenting with different models and the usage of a reliable method to measure model accuracy. 
-                Also, exploring alternative models, such as decision trees with varying depth, to find the best predictions.
-                </p>
-            </div>
-            <div class="portfolio">
-                <h3>Portfolio 2: Data Manipulation</h3>
-                <p>Developed a simple data manipulation program using Panda, a Python package that provides fast,
-                    flexible, and expressive data structures. <a href="myportfolio.html">Go to Portfolio</a></p>
-            </div>
-                       
         </section>
         <section id="contact">
             <h2>Contact</h2>
