--- a/personalWeb.html
+++ b/personalWeb.html
@@ -64,18 +64,22 @@
                 </p>
             </div>
             <div class="project">
-                <h3>Project Title 2: Simplified Ivy's Documentaions for New Contributors</h3>
+                <h3>Project Title 2: GitHub Explorer</h3>
+                <p> GitHub Explorer is an educational resource and guide for developers of all levels, aiming to demystify key concepts in GitHub. 
+                    Whether you're a seasoned developer or just starting your coding journey, this project offers a clear and comprehensive explanation 
+                    of GitHub repositories, branches, forks, clones, and the fundamental workflow. <br>
+                    The goal is to empower developers to confidently navigate GitHub, collaborate on open-source projects, and contribute to the world 
+                    of software development. With easy-to-understand explanations and practical insights, GitHub Explorer is your go-to resource for 
+                    mastering GitHub's core concepts. Explore, learn, and unlock the full potential of version control and collaboration in software 
+                    development. The article can be found<a href="https://github-explained.blogspot.com"> here.</a> 
+                </p>
+            </div>
+            <div class="project">
+                <h3>Project Title 3: Simplified Ivy's Documentaions for New Contributors </h3>
                 <p> While familiarizing myself with Ivy's documentation and codebase during the onboarding process, I recognized the need 
                     for a concise manual tailored to new contributors. This "proposed guide simply" emphasizes crucial sections, facilitating a seamless 
                     transition into the Ivy ecosystem. <a href="Simple-Guide-ToNew-Ivy-Contributors.pdf" download>Click on</a> 
                     to download a copy. (Please note the guide is being examined by Ivy engineers).
-                </p>
-            </div>
-            <div class="project">
-                <h3>Project Title 3: Adversarial Attacks on Machine Learning-based Intrusion Detection Systems</h3>
-                <p> This is another proposed research topic under consideration. This proposed topic, attempts to explore how adversarial 
-                    attacks can be used to bypass machine learning-based intrusion detection systems (IDS). Develop and test novel techniques 
-                    to enhance the robustness of IDS against adversarial examples, ultimately leading to more secure detection of network intrusions.<!--project portfolio -->
                 </p>
             </div>
         </section>
