--- a/personalWeb.html
+++ b/personalWeb.html
@@ -18,7 +18,7 @@
     <body>
         <header>
             <h1>Ambroise Ngayinoko</h1>
-            <p class="job-title">Computer Science Engineer | Machine Learning Researcher</p>
+            <p class="job-title">Software Engineer</p>
             <p class="main-interest">Main Interest: Machine Learning | Cybersecurity | Web Dev</p>
         </header>
         <nav>
