--- a/personalWeb.html
+++ b/personalWeb.html
@@ -71,7 +71,7 @@
                     The goal is to empower developers to confidently navigate GitHub, collaborate on open-source projects, and contribute to the world 
                     of software development. With easy-to-understand explanations and practical insights, GitHub Explorer is your go-to resource for 
                     mastering GitHub's core concepts. Explore, learn, and unlock the full potential of version control and collaboration in software 
-                    development. The article can be found<a href="https://github-explained.blogspot.com"> here.</a> 
+                    development. The blog can be found<a href="https://github-explained.blogspot.com"> here.</a> 
                 </p>
             </div>
             <div class="project">
