Last update in personalWeb.html file

--- a/personalWeb.html
+++ b/personalWeb.html
@@ -76,7 +76,7 @@
         <ul>
             <li><a href="#about">About Me</a></li>
             <li><a href="#achievements">Achievements</a></li>
-            <li><a href="#projects">Projects</a></li>
+            <li><a href="#projects">Field Projects</a></li>
             <!--<li><a href="#portfolio">Portfolio</a></li> -->
             <li><a href="#contact">Contact</a></li>
         </ul>
