--- a/personalWeb.html
+++ b/personalWeb.html
@@ -108,12 +108,13 @@
     <section id="projects">
             <h2>Field Projects</h2>
             <div class="project">
-                <h3>Project Title 1: ML Competition - Open-Problem: Single - Cell Perturbations </h3>
-                <p>In the fast-paced world of single-cell analysis, the Kaggle competition titled "Open Problem: Single-Cell Perturbations" 
-                    plays a vital role. This research paper outlines the goals of the competition and underscores its importance in enhancing 
-                    our comprehension of how genes react to experimental changes at the single-cell level. A key method used in this competition 
-                    is Differential Expression (DE) Modeling, which allows us to calculate alterations in gene expression when subjected 
-                    to perturbations. <a href="https://www.kaggle.com/code/ambrosarba/exercise-improved-machine-learning-competition/edit/run/154615115" download>It can be found here.</a> 
+                <h3>Project Title 1: Housing Prices Competition for Kaggle Learn Users</h3>
+                <p>If you were to inquire about someone's ideal home, they likely wouldn't start by discussing basement ceiling height or the distance to an 
+                    east-west railroad. However, the dataset for this competition demonstrates that factors beyond the quantity of bedrooms or the presence 
+                    of a white-picket fence significantly impact price negotiations. <p></p>p
+                    Featuring 79 descriptive variables covering nearly every facet of residential properties in Ames, Iowa, this challenge invites participants 
+                    to forecast the ultimate price of each home.
+ <a href="https://www.kaggle.com/code/ambrosarba/exercise-improved-machine-learning-competition/edit/run/154615115" download>It can be found here.</a> 
                 
                     <!--########## https://machinelearner1.blogspot.com/2023/10/machine-learning-project.html#############-->
                 </p>
