--- a/personalWeb.html
+++ b/personalWeb.html
@@ -114,7 +114,34 @@
                     of a white-picket fence significantly impact price negotiations. <p></p>p
                     Featuring 79 descriptive variables covering nearly every facet of residential properties in Ames, Iowa, this challenge invites participants 
                     to forecast the ultimate price of each home.
- <a href="https://www.kaggle.com/code/ambrosarba/exercise-improved-machine-learning-competition/edit/run/154615115" download>It can be found here.</a> 
+
+                <section>
+        <h2>Practice Skills</h2>
+        <ul>
+            <li>Creative feature engineering</li>
+            <li>Advanced regression techniques like random forest and gradient boosting</li>
+        </ul>
+    </section>
+
+    <section>
+        <h2>Acknowledgments</h2>
+        <p>The Ames Housing dataset was compiled by Dean De Cock for use in data science education. It's an incredible
+            alternative for data scientists looking for a modernized and expanded version of the often cited Boston
+            Housing dataset.</p>
+    </section>
+
+    <section>
+        <h2>Evaluation</h2>
+        <h3>Goal</h3>
+        <p>It is your job to predict the sales price for each house. For each Id in the test set, you must predict the
+            value of the SalePrice variable.</p>
+
+        <h3>Metric</h3>
+        <p>Submissions are evaluated on Root-Mean-Squared-Error (RMSE) between the logarithm of the predicted value and
+            the logarithm of the observed sales price. (Taking logs means that errors in predicting expensive houses and
+            cheap houses will affect the result equally.)</p>
+    </section>
+                 <a href="https://www.kaggle.com/code/ambrosarba/exercise-improved-machine-learning-competition/edit/run/154615115" download>It can be found here.</a> 
                 
                     <!--########## https://machinelearner1.blogspot.com/2023/10/machine-learning-project.html#############-->
                 </p>
