Update personalWeb.html for Kaggle
Updating for Kaggle Competition.

--- a/personalWeb.html
+++ b/personalWeb.html
@@ -97,7 +97,7 @@
     <section id="achievements">
         <h2>Achievements</h2>
             <ul>
-                <li>Currently leading a Kaggle ML competition group: Open-Problem - Single-Cell Perturbations.</li>
+                <li>Submitted a Kaggle ML competition course: Housing Prices Competition for Kaggle Learn Users.</li>
                 <li>Secured an intesting internship position <a href="https://unify.ai/docs/models/" download>at Ivy,</a> an open-source project.</li>
                 <li>Submitted a proposed concised guide to Ivy for its new contributors.</li>
                 <li>Contributing to a language translation project for Wikipedia's articles, an NLP 
@@ -111,11 +111,12 @@
                 <h3>Project Title 1: Housing Prices Competition for Kaggle Learn Users</h3>
                 <p>If you were to inquire about someone's ideal home, they likely wouldn't start by discussing basement ceiling height or the distance to an 
                     east-west railroad. However, the dataset for this competition demonstrates that factors beyond the quantity of bedrooms or the presence 
-                    of a white-picket fence significantly impact price negotiations. <p></p>p
-                    Featuring 79 descriptive variables covering nearly every facet of residential properties in Ames, Iowa, this challenge invites participants 
-                    to forecast the ultimate price of each home.
+                    of a white-picket fence significantly impact price negotiations. </p>
+                <p>Featuring 79 descriptive variables covering nearly every facet of residential properties in Ames, Iowa, this challenge invites participants 
+                    to forecast the ultimate price of each home.</p>
+                <body>
 
-                <section>
+    <section>
         <h2>Practice Skills</h2>
         <ul>
             <li>Creative feature engineering</li>
@@ -141,6 +142,20 @@
             the logarithm of the observed sales price. (Taking logs means that errors in predicting expensive houses and
             cheap houses will affect the result equally.)</p>
     </section>
+
+    <section>
+        <h2>Submission File Format</h2>
+        <p>The file should contain a header and have the following format:</p>
+        <pre>
+Id,SalePrice
+1461,169000.1
+1462,187724.1233
+1463,175221
+        </pre>
+    </section>
+
+</body>
+
                  <a href="https://www.kaggle.com/code/ambrosarba/exercise-improved-machine-learning-competition/edit/run/154615115" download>It can be found here.</a> 
                 
                     <!--########## https://machinelearner1.blogspot.com/2023/10/machine-learning-project.html#############-->
