--- a/personalWeb.html
+++ b/personalWeb.html
@@ -133,12 +133,12 @@
 
                 <section>
                     <h3>Evaluation</h3>
-                        <h3>Goal</h3>
-                            <p>It is your job to predict the sales price for each house. For each Id in the test set, you must predict the
+                       <li> <h3>Goal</h3></li>
+                            <p>It is the competiting student's job to predict the sales price for each house. For each Id in the test set, the competiting student must predict the
                             value of the SalePrice variable.
                             </p>
 
-        <h3>Metric</h3>
+        <li><h3>Metric</h3></li>
         <p>Submissions are evaluated on Root-Mean-Squared-Error (RMSE) between the logarithm of the predicted value and
             the logarithm of the observed sales price. (Taking logs means that errors in predicting expensive houses and
             cheap houses will affect the result equally.)</p>
